--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">Masbah_QuizApp</string>
+    <string name="app_name">Eng_Quiz_App</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign Up !</string>
+    <string name="hello">Hello</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_up_">Sign Up</string>
+    <string name="start_quiz">Start Quiz</string>
+    <string name="this_quiz_will_listen_to_you_take_photos_from_your_camera_and_record_audio">This quiz will listen to you, take photos from your camera, and record audio.</string>
+    <string name="todo">TODO</string>
 </resources>
